--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
-  "name": "customer",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "customer",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "axios": "^0.19.2",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
+        "react-owl-carousel": "^2.3.1",
+        "react-owl-carousel2": "^0.3.0",
+        "schema-utils": "^2.6.4",
+        "@material-ui/core": "^4.9.4",
+        "@material-ui/icons": "^4.9.1",
+        "react-images-upload": "^1.2.8",
+        "react-modal": "^3.11.2",
+        "react-responsive-modal": "^4.0.1",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "3.4.0",
+        "react-spring": "^8.0.27",
+        "react-transition-group": "^4.3.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
