--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.9.4",
+        "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "axios": "^0.19.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
-        "react-owl-carousel": "^2.3.1",
-        "react-owl-carousel2": "^0.3.0",
-        "schema-utils": "^2.6.4",
-        "@material-ui/core": "^4.9.4",
-        "@material-ui/icons": "^4.9.1",
         "react-images-upload": "^1.2.8",
         "react-modal": "^3.11.2",
+        "react-owl-carousel": "^2.3.1",
+        "react-owl-carousel2": "^0.3.0",
         "react-responsive-modal": "^4.0.1",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.0",
         "react-spring": "^8.0.27",
-        "react-transition-group": "^4.3.0"
+        "react-transition-group": "^4.3.0",
+        "schema-utils": "^2.6.4"
     },
     "scripts": {
         "start": "react-scripts start",
